[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/textures/walls/floors/crumbling_floor_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/CrumblingFloor.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "close_to_crumbling"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 30 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 29 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 29, 26 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 29, 20 )

[sub_resource type="Animation" id=7]
resource_name = "crumbling"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Collider:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), null ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "gone"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Collider:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ null, null ]
}

[sub_resource type="Animation" id=9]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 32, 4 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 32, 5 )

[node name="CrumblingFloor" type="StaticBody2D"]
light_mask = 0
z_index = 15
collision_layer = 2
collision_mask = 2333
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 13

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/close_to_crumbling = SubResource( 1 )
anims/crumbling = SubResource( 7 )
anims/gone = SubResource( 8 )
anims/idle = SubResource( 9 )

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -59 )
collision_layer = 2

[node name="Collider" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( 0, 23 )
shape = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="PlayerTurnoff" type="Area2D" parent="."]
visible = false

[node name="Collider" type="CollisionShape2D" parent="PlayerTurnoff"]
shape = SubResource( 11 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, -32 )
emitting = false
amount = 24
explosiveness = 0.28
emission_shape = 2
emission_rect_extents = Vector2( 25, 0 )
direction = Vector2( 0, 120 )
spread = 140.08
gravity = Vector2( 0, 90 )
initial_velocity = 15.0
color = Color( 0.435294, 0.435294, 0.435294, 1 )
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PlayerTurnoff" to="." method="_on_PlayerTurnoff_body_entered"]
